Expand code comments and update README

--- a/src/MenuBurger.css
+++ b/src/MenuBurger.css
@@ -1,4 +1,4 @@
-.menu-burger > div {
+#menu-burger > div {
   height: 4px;
   width: 35px;
   margin: 5px 0;
@@ -6,34 +6,41 @@
   transition: transform 1s ease, opacity 1s ease, background-color 1s ease;
 }
 
-.menu-burger {
+#menu-burger {
 	position: absolute;
 	z-index: 2;
 	top: 12px;
 	left: 12px;
+  border: none;
+  background: none;
 }
 
-.menu-burger:hover {
+#menu-burger:hover {
 	cursor: pointer;
 }
 
-.menu-burger.menu-show > div:nth-of-type(1) {
+#menu-burger:focus {
+  outline: none;
+  box-shadow: 0 0 0 2px orange;
+}
+
+#menu-burger.menu-show > div:nth-of-type(1) {
   transform: rotate(45deg) translate(3px,10px); 
   background-color: black;
 }
 
-.menu-burger.menu-show > div:nth-of-type(2) {
+#menu-burger.menu-show > div:nth-of-type(2) {
   opacity: 0;
   background-color: black;
 }
 
-.menu-burger.menu-show > div:nth-of-type(3) {
+#menu-burger.menu-show > div:nth-of-type(3) {
   transform: rotate(-45deg) translate(3px,-10px);
   background-color: black;
 }
 
 @media screen and (min-width: 750px) {
-	.menu-burger {
+	#menu-burger {
 		visibility: hidden;
 	}
 }
