--- a/src/select.css
+++ b/src/select.css
@@ -12,6 +12,11 @@ select {
     padding: 15px;
 }
 
+select:focus {
+	outline: none;
+	box-shadow: 0 0 0 2px orange;
+}
+
 option {
 	height: 40px;
 }
