--- a/src/Map.css
+++ b/src/Map.css
@@ -1,9 +1,17 @@
-#map {
-	height:920px;
+.map-container {
+	height: 100vh;
 	width: 75%;
 }
 
+#map {
+	height:100%;
+	width: 100%;
+}
+
 @media screen and (max-width: 750px) {
+	.map-container {
+		width: 100%;
+	}
 	#map {
 		width: 100%;
 		height: 100vh;
